--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,10 @@
                 android:value=".MainActivity" />
         </activity>
         <activity android:name=".SettingsActivity"></activity>
+        <provider
+            android:authorities="@string/content_authority"
+            android:name=".data.WeatherPovider"
+            android:exported="false"/>
     </application>
 
 </manifest>
