--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,8 +29,11 @@
         </activity>
         <activity android:name=".SettingsActivity"></activity>
         <provider
+            android:name=".data.WeatherProvider"
             android:authorities="@string/content_authority"
-            android:name=".data.WeatherPovider"
+            android:exported="false"/>
+        <service
+            android:name=".sync.WeatherIntentServic"
             android:exported="false"/>
     </application>
 
