--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,6 +16,7 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    dataBinding.enabled = true
 }
 
 dependencies {
@@ -29,4 +30,5 @@ dependencies {
     implementation 'com.android.support:recyclerview-v7:26.1.0'
     implementation 'com.android.support:preference-v7:26.1.0'
     implementation 'com.firebase:firebase-jobdispatcher:0.5.0'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.0-beta3'
 }
